# CS372Lab.wilson

apps/TreeDemo/: ExpTree.cpp  gtest.cpp  main.cpp
apps/apptemplate/source/: assignment01  assignment01.cpp  assignment03.cpp  assignment06.cpp  assignment07.cpp  test_q1.cpp  test_q2.cpp
apps/bagtest/: CMakeLists.txt
apps/bagtest/source/: BagTest.cpp
apps/dictionary/: CMakeLists.txt  TestDictionary.cpp
apps/hanoi/: hanoiit  hanoiit.cpp
apps/listtest/: CMakeLists.txt  gtestlist.cpp
apps/simplecalc/: CMakeLists.txt  simplecalc.cpp
apps/sorttest/: CMakeLists.txt  sorttest.cpp
docs/: Assignment 01
include/: Dictionary.hpp  List.hpp  SelfList.hpp  Tree.hpp  sorter.hpp
